resolved some issues related to routing and login process and made folder structure better

--- a/src/app/layout/layouts/website/components/header/header.component.html
+++ b/src/app/layout/layouts/website/components/header/header.component.html
@@ -9,7 +9,7 @@
         <nav>
             <ul class="flex items-center gap-5">
                 <li *ngIf="!isAuth">
-                    <a routerLink="/login" class="call-to-action-outlined ">Login</a>
+                    <a routerLink="/auth/login" class="call-to-action-outlined ">Login</a>
                 </li>
                 <!-- <li *ngIf="user.isAdmin">
                     <a routerLink="/dashboard">Dashboard</a>
