--- a/src/app/layout/layouts/website/website.component.html
+++ b/src/app/layout/layouts/website/website.component.html
@@ -1,4 +1,4 @@
-<div class="">
+<section id="website-layout">
     <!-- Website Header  -->
     <div>
         <website-header></website-header>
@@ -6,10 +6,9 @@
     <!-- Website Content  -->
     <div class="my-5">
         <router-outlet></router-outlet>
-        <!-- <website-home></website-home> -->
     </div>
     <!-- Website Footer  -->
     <div>
         <website-footer></website-footer>
     </div>
-</div>
+</section>
