--- a/src/app/modules/auth/login/login.component.html
+++ b/src/app/modules/auth/login/login.component.html
@@ -31,7 +31,7 @@
             <!-- Login Button  -->
             <button type="submit" class="w-full bg-primary py-4 rounded-full text-lg text-white">Login</button>
 
-            <p class="text-center text-grey">New user? <a routerLink="/register"
+            <p class="text-center text-grey">New user? <a routerLink="/auth/register"
                     class="underline text-grey">Register here</a></p>
         </div>
 
