--- a/src/app/modules/auth/register/register.component.html
+++ b/src/app/modules/auth/register/register.component.html
@@ -64,7 +64,7 @@
             <!-- Register Button  -->
             <button type="submit" class="w-full bg-primary py-4 rounded-full text-lg text-white">Register</button>
 
-            <p class="text-center text-grey">Already user ? <a routerLink="/login" 
+            <p class="text-center text-grey">Already user ? <a routerLink="/auth/login" 
                     class="underline text-grey">login here</a></p>
         </div>
 
