--- a/src/app/common/components/loading/loading.component.html
+++ b/src/app/common/components/loading/loading.component.html
@@ -1,4 +1,4 @@
-<div *ngIf="isLoading" class="h-screen flex flex-col justify-center items-center bg-white z-50 font-sans">
+<div class="h-screen flex flex-col justify-center items-center bg-white z-[1000] font-sans fixed w-screen">
     <img src="assets/loading.svg"  width="200" height="200" alt="loading" class=" w-52 h-52 border-b-4 border-b-primary">
     <h1 class="text-primary mt-2 text-xl">loading...</h1>
 </div>
