added complete logic for user cart for guest and logged in user and resolve many other issues

--- a/src/app/modules/website/pages/food-detail/food-detail.component.html
+++ b/src/app/modules/website/pages/food-detail/food-detail.component.html
@@ -1,5 +1,5 @@
 <!-- When There IS No Data  -->
-<not-found-page [visible]="!food.id" notFoundMessage="Food Not Found!" resetLinkText="Go To HomePage"></not-found-page>
+<!-- <not-found-page [visible]="!food.id" notFoundMessage="Food Not Found!" resetLinkText="Go To HomePage"></not-found-page> -->
 
 <!-- Food Details  -->
 <section id="food-details">
