--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,3 @@
 <!-- Loading Component  -->
-<loading *ngIf="isLoading|async"></loading>
+<loading *ngIf="isLoading$ |async"></loading>
 <router-outlet></router-outlet>
