--- a/src/app/modules/website/pages/cart-page/cart-page.component.html
+++ b/src/app/modules/website/pages/cart-page/cart-page.component.html
@@ -2,7 +2,7 @@
     <!-- When There IS No Data  -->
     <not-found-page [visible]="!cart || !cart.items.length" notFoundMessage="Cart Page Is Empty!"
         resetLinkText="Go To HomePage"></not-found-page>
-    <div class="grid grid-cols-12 gap-10" *ngIf="cart.items.length">
+    <div class="grid grid-cols-12 gap-10" *ngIf="cart?.items?.length">
         <ul class="border border-[#F3D0D7] col-span-8 rounded-lg px-8 py-2 overflow-y-scroll h-[500px]">
             <li *ngFor="let cartItem of cart.items" class="grid grid-cols-5 my-5 items-center">
                 <img [src]="cartItem.food.imgUrl" [alt]="cartItem.food.name" class="w-20 h-20 rounded-full">
