installed primeng and used confirmation popup and scrolltotop component and resolved some issues

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,7 @@
+<!-- Scroll to top button   -->
+<p-scrollTop />
 <!-- Loading Component  -->
 <loading *ngIf="isLoading$ |async"></loading>
+<!-- Main Content  -->
 <router-outlet></router-outlet>
+
